Continuing with reformating portfolio page.

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -65,7 +65,7 @@
       <div class="col mb-4">
         <div class="card h-100">
           <img src="./Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends" class="card-img-top">
-          <div class="card-body">
+          <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Trivia with Friends</h5>
               <p class="card-text">Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub
@@ -90,7 +90,7 @@
       <div class="col mb-4">
         <div class="card h-100">
           <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard" class="card-img-top">
-          <div class="card-body">
+          <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Weather Dashboard</h5>
               <p class="card-text">Applications: Bootstrap, JavaScript, jQuery, LocalStorage
@@ -115,7 +115,7 @@
       <div class="col mb-4">
         <div class="card h-100">
           <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker" class="card-img-top">
-          <div class="card-body">
+          <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Time Tracker</h5>
               <p class="card-text">Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js,
@@ -143,7 +143,7 @@
       <div class="col mb-4">
         <div class="card h-100">
           <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger" class="card-img-top">
-          <div class="card-body">
+          <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Eat-Da-Burger</h5>
               <p class="card-text">Applications: Handlebars.js, Node.js, MySql, Express, Heroku
@@ -167,7 +167,7 @@
       <div class="col mb-4">
         <div class="card h-100">
           <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler" class="card-img-top">
-          <div class="card-body">
+          <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Work Day Scheduler</h5>
               <p class="card-text">Applications: Bootstrap, HTML, CSS
@@ -190,7 +190,7 @@
       <div class="col mb-4">
         <div class="card h-100">
           <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming" class="card-img-top">
-          <div class="card-body">
+          <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">OOP Programming</h5>
               <p class="card-text">Applications: Inquirer, HTML, JavaScript, CSS
