Continuing reformatting portfolio

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./public/Assets/Images/favicon.png" type="image/x-icon/">
+  <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
   <title>Portfolio</title>
 
   <!-- Link for google font -->
@@ -63,20 +63,21 @@
     <!-- Link to my first project -->
     <div class="row row-cols-1 row-cols-md-3">
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="./Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends" class="card-img-top">
+        <div class="card h-100 border border-dark">
+          <div class="wrapper">
+            <img src="./Assets/Images/Trivia-with-Friends.jpg" alt="Trivia with Friends" class="card-img-top">
+          </div>
           <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Trivia with Friends</h5>
               <p class="card-text">Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub
-              </p>
+              </p><br><br>
               <div class="row">
                 <!-- Links to GitHub deployed website and github code -->
                 <div class="col-6 anchor">
                   <a id="anchor1" class="button" href="https://dazacher.github.io/Trivia-With-Friends/"
                     target="_blank">Website</a>
                 </div>
-                <div class="row"></div>
                 <div class="col-6 anchor">
                   <a id="anchor2" class="button" href="https://github.com/dazacher/Trivia-With-Friends"
                     target="_blank">GitHub Code</a>
@@ -88,13 +89,15 @@
       </div>
       <!-- End of Card -->
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard" class="card-img-top">
+        <div class="card h-100 border border-dark">
+          <div class="wrapper">
+            <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard" class="card-img-top">
+          </div>
           <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Weather Dashboard</h5>
               <p class="card-text">Applications: Bootstrap, JavaScript, jQuery, LocalStorage
-              </p><br>
+              </p><br><br><br>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor3" class="button" href="https://dazacher.github.io/Weather-Dashboard/"
@@ -102,8 +105,7 @@
                 </div>
                 <div class="col-6 anchor">
                   <a id="anchor4" class="button" href="https://github.com/dazacher/Weather-Dashboard"
-                    target="_blank">GitHub
-                    Code</a>
+                    target="_blank">GitHub Code</a>
                 </div>
               </div>
             </div>
@@ -113,8 +115,10 @@
 
       <!-- End of Card -->
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker" class="card-img-top">
+        <div class="card h-100 border border-dark">
+          <div class="wrapper">
+            <img src="./Assets/Images/TimeTracker.png" alt="Time Tracker" class="card-img-top">
+          </div>
           <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Time Tracker</h5>
@@ -141,8 +145,10 @@
     <!-- End of Card -->
     <div class="row row-cols-1 row-cols-md-3">
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger" class="card-img-top">
+        <div class="card h-100 border border-dark">
+          <div class="wrapper">
+            <img src="./Assets/Images/Eat-Da-Burger.jpg" alt="Eat-Da_Burger" class="card-img-top">
+          </div>
           <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Eat-Da-Burger</h5>
@@ -165,13 +171,15 @@
 
       <!-- End of Card -->
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler" class="card-img-top">
+        <div class="card h-100 border border-dark">
+          <div class="wrapper">
+            <img src="./Assets/Images/Work-Day-Scheduler.jpg" alt="Work Day Scheduler" class="card-img-top">
+          </div>
           <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">Work Day Scheduler</h5>
               <p class="card-text">Applications: Bootstrap, HTML, CSS
-              </p>
+              </p><br><br><br><br>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor9" class="button" href="https://dazacher.github.io/Work_Day_Scheduler/"
@@ -188,8 +196,10 @@
       </div>
       <!-- End of Card -->
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming" class="card-img-top">
+        <div class="card h-100 border border-dark">
+          <div class="wrapper">
+            <img src="./Assets/Images/OOP-Programming.jpg" alt="OOP-Programming" class="card-img-top">
+          </div>
           <div class="card-body text">
             <div class="text">
               <h5 class="card-title anchor">OOP Programming</h5>
