--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="icon" href="./public/Assets/Images/favicon.png" type="image/x-icon/">
+    <link rel="icon" href="./Assets/Images/favicon.png" type="image/x-icon/">
     <meta charset="UTF-8">
     <meta property='og:image' content="/Assets/Images/Me.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
