New readme and touchups to portfolio page.

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -71,7 +71,7 @@
             <div class="text">
               <h5 class="card-title">Trivia with Friends</h5>
               <p class="card-text">Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub
-              </p><br><br>
+              </p><br><br><br>
               <div class="row">
                 <!-- Links to GitHub deployed website and github code -->
                 <div class="col-6 anchor">
@@ -92,7 +92,7 @@
       <div class="col mb-4">
         <div class="card h-75 border border-dark">
           <div class="wrapper">
-            <img src="./Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard" class="card-img-top">
+            <img src="./Assets/Images/WeatherDashboard.png" alt="Weather Dashboard" class="card-img-top">
           </div>
           <div class="card-body text h-75">
             <div class="text">
@@ -126,7 +126,7 @@
               <p class="card-text">Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js,
                 ESLint, Moment,
                 bCrypt, CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB
-              </p> 
+              </p> <br>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor5" class="button" href="https://time-tracker-v-2.herokuapp.com/login"
@@ -207,7 +207,7 @@
             <div class="text">
               <h5 class="card-title">OOP Programming</h5>
               <p class="card-text">Applications: Inquirer, HTML, JavaScript, CSS
-              </p><br><br><br>
+              </p><br><br><br><br>
               <div class="row">
                 <div class="col-12 anchor">
                   <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming"
