Found better icons for index.html page.

--- a/index.html
+++ b/index.html
@@ -107,27 +107,28 @@
         <!-- <strong> -->
         <!-- <li> -->
         <a href="mailto:dazacher2000@yahoo.com? subject=subject text">
-          <i class="fa fa-envelope fa-3x"></i></a>
+          <img src="public/Assets/Images/email-xxl.png" alt="email" class="indexImages"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- Link to my GitHub page -->
         <!-- <strong> -->
         <!-- <li> -->
         <a href="https://github.com/dazacher" target="_blank">
-          <i class="fab fa-github-square fa-3x"></i></a>
+          <img src="public/Assets/Images/github-9-xxl.png" alt="github" class="indexImages"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- Link to my Resume page -->
         <!-- <strong> -->
         <!-- <li> -->
         <a href="./public/Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">
-          <i class="fas fa-file fa-3x"></i></a>
+          <img src="public/Assets/Images/document-xxl.png" alt="file" class="indexImages"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- Link to my LinkedIn page -->
         <!-- <strong> -->
         <!-- <li> -->
-        <a href="https://linkedin.com/in/deeannscanniello" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+        <a href="https://linkedin.com/in/deeannscanniello" target="_blank">
+          <img src="public/Assets/Images/linkedin-icon-purple.png" alt="linkedin" class="indexImages"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- </ul> -->
