Made contact icons highlight when hovered over.

--- a/index.html
+++ b/index.html
@@ -106,29 +106,29 @@
         <!-- Link to my email address so someone can email me. -->
         <!-- <strong> -->
         <!-- <li> -->
-        <a href="mailto:dazacher2000@yahoo.com? subject=subject text">
-          <img src="public/Assets/Images/email-xxl.png" alt="email" class="indexImages"/></a>
+        <a href="mailto:dazacher2000@yahoo.com? subject=subject text" id="emailImage">
+          <img src="public/Assets/Images/email-32.png" class="indexImages" alt="email" id="email"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- Link to my GitHub page -->
         <!-- <strong> -->
         <!-- <li> -->
-        <a href="https://github.com/dazacher" target="_blank">
-          <img src="public/Assets/Images/github-9-xxl.png" alt="github" class="indexImages"/></a>
+        <a href="https://github.com/dazacher" target="_blank" id="githubImage">
+          <img src="public/Assets/Images/github-9-32.png" class="indexImages" alt="github" id="github"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- Link to my Resume page -->
         <!-- <strong> -->
         <!-- <li> -->
-        <a href="./public/Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">
-          <img src="public/Assets/Images/document-xxl.png" alt="file" class="indexImages"/></a>
+        <a href="./public/Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf" id="fileImage">
+          <img src="public/Assets/Images/document-32.png" class="indexImages" alt="file" id="file"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- Link to my LinkedIn page -->
         <!-- <strong> -->
         <!-- <li> -->
-        <a href="https://linkedin.com/in/deeannscanniello" target="_blank">
-          <img src="public/Assets/Images/linkedin-icon-purple.png" alt="linkedin" class="indexImages"/></a>
+        <a href="https://linkedin.com/in/deeannscanniello" target="_blank" id="linkedinImage">
+          <img src="public/Assets/Images/linkedin-3-32.png" class="indexImages" alt="linkedin" id="linkedin"/></a>
         <!-- </li> -->
         <!-- </strong> -->
         <!-- </ul> -->
