--- a/public/contact.html
+++ b/public/contact.html
@@ -40,22 +40,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
             <div class="flex-row-reverse">
                 <div class="navbar-nav">
                     <!-- Link to the About me page -->
-                    <a class="nav-item nav-link active" href="../index.html">About Me <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../index.html">About Me</a>
                     <!-- Link to the Resume page -->
                     <a class="nav-item nav-link"
                         href="./Assets/Dee_Ann_Scanniello_Resume_Web_Developer_Full_Stack.pdf">Resume</a>
                     <!-- Link to the Portfolio page -->
                     <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
                     <!-- Link to the Contact page -->
-                    <a class="nav-item nav-link" href="./contact.html">Contact</a>
+                    <a class="nav-item nav-link active" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
                 </div>
             </div>
-        </div>
         </div>
     </nav>
     <!-- Container to hold the line and Contact header in -->
