--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -65,8 +65,8 @@
           <div class="card-body h-75 text">
             <div class="text">
               <h5 class="card-title">Trivia with Friends</h5>
-              <p class="card-text">Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub
-              </p><br><br><br>
+              <p class="card-text">A fun trivia style game. Keep track of high score and try to beat it.<br> Applications: Bulma CSS, jQuery, API's, SoundManager2, AJAX, JSON, Git Bash, GitHub
+              </p><br><br>
               <div class="row">
                 <!-- Links to GitHub deployed website and github code -->
                 <div class="col-6 anchor">
@@ -76,7 +76,7 @@
                 <div class="col-6 anchor">
                   <a id="anchor2" class="button" href="https://github.com/dazacher/Trivia-With-Friends"
                     target="_blank">GitHub Code</a>
-                </div>
+                </div> <!-- Links to GitHub deployed website and github code -->
               </div>
             </div>
           </div>
@@ -92,8 +92,8 @@
           <div class="card-body text h-75">
             <div class="text">
               <h5 class="card-title">Weather Dashboard</h5>
-              <p class="card-text">Applications: Bootstrap, JavaScript, jQuery, LocalStorage
-              </p><br><br><br>
+              <p class="card-text">Look up the weather anywhere in the United States to plan a vacation.<br> Applications: Bootstrap, JavaScript, jQuery, LocalStorage
+              </p><br><br>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor3" class="button" href="https://dazacher.github.io/Weather-Dashboard/"
@@ -118,10 +118,10 @@
           <div class="card-body h-75 text">
             <div class="text">
               <h5 class="card-title">Time Tracker</h5>
-              <p class="card-text">Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js,
+              <p class="card-text">Contract Worker? Keep track of your hours and pay. Full Stack application.<br> Applications: Node.js, Express.js, MySql, Sequelize, Travis CI/CD, Passport.js,
                 ESLint, Moment,
                 bCrypt, CSS, HTML, Bootstrap, JavaScript, API’s, AJAX, JSON, Git Bash, GitHub, Heroku, JawsDB
-              </p> <br>
+              </p>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor5" class="button" href="https://time-tracker-v-2.herokuapp.com/login"
@@ -150,8 +150,8 @@
           <div class="card-body text h-75">
             <div class="text">
               <h5 class="card-title">Eat-Da-Burger</h5>
-              <p class="card-text">Applications: Handlebars.js, Node.js, MySql, Express, Heroku
-              </p><br><br><br>
+              <p class="card-text">Have a little fun devouring burgers.<br> Applications: Handlebars.js, Node.js, MySql, Express, Heroku
+              </p><br><br>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor7" class="button" href="https://eat-da-burger-das.herokuapp.com/"
@@ -176,8 +176,8 @@
           <div class="card-body text h-75">
             <div class="text">
               <h5 class="card-title">Work Day Scheduler</h5>
-              <p class="card-text">Applications: Bootstrap, HTML, CSS
-              </p><br><br><br><br>
+              <p class="card-text">Keep track of your appointments and activities on a daily basis. <br>Applications: Bootstrap, HTML, CSS
+              </p><br><br>
               <div class="row">
                 <div class="col-6 anchor">
                   <a id="anchor9" class="button" href="https://dazacher.github.io/Work_Day_Scheduler/"
@@ -201,8 +201,8 @@
           <div class="card-body text h-75">
             <div class="text">
               <h5 class="card-title">OOP Programming</h5>
-              <p class="card-text">Applications: Inquirer, HTML, JavaScript, CSS
-              </p><br><br><br><br>
+              <p class="card-text">Keep track of your department employees. Backend application only. <br>Applications: Inquirer, HTML, JavaScript, CSS
+              </p><br><br>
               <div class="row">
                 <div class="col-12 anchor">
                   <a id="anchor12" class="button" href="https://github.com/dazacher/OOP-Programming"
